k8s/internal/main.uat.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $SERVICE_NAME
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      name: $SERVICE_NAME
  template:
    metadata:
      name: $SERVICE_NAME
      labels:
        name: $SERVICE_NAME
    spec:
      containers:
        - name: $SERVICE_NAME
          image: asia.gcr.io/gcp-project-sample/$SERVICE_NAME:$IMAGE_TAG
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: $SERVICE_PATH/actuator/info
              port: 8080
              httpHeaders:
                - name: X-Device-ID
                  value: HealthCheck
            initialDelaySeconds: 15
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: $SERVICE_PATH/actuator/health
              port: 8080
              httpHeaders:
                - name: X-Device-ID
                  value: HealthCheck
            initialDelaySeconds: 10
            timeoutSeconds: 1
          ports:
            - name: http
              containerPort: 8080
      restartPolicy: Always
      imagePullSecrets:
        - name: docker-image-pull-secret
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: $SERVICE_NAME
  name: $SERVICE_NAME
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    name: $SERVICE_NAME
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: $SERVICE_NAME
spec:
  rules:
    - host: $HOST
      http:
        paths:
          - backend:
              serviceName: $SERVICE_NAME
              servicePort: 80
            path: $SERVICE_PATH/
